--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>Objects in JS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Vacation Tracker</title>
+    <link rel="stylesheet" href="style.css" />
+    
   </head>
   <body>
-    <h1>Updating HTML in JS</h1>
-    <div class="container"></div>
-    <script src="jsBasics.js"></script>
+    <h1>Vacation tracker</h1>
+    <form>
+      <fieldset>
+        <legend>Enter your vacation start and end date</legend>
+        <p>
+          <label for="start-date">Start date</label>
+          <input type="date" id="start-date" required />
+        </p>
+        <p>
+          <label for="end-date">End date</label>
+          <input type="date" id="end-date" required />
+        </p>
+      </fieldset>
+      <p>
+        <button type="submit">Add Vacation</button>
+      </p>
+    </form>
+    <section id="past-vacations"></section>
+
+    <script src="app.js" defer></script>
   </body>
 </html>
