added extra link tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width" />
     <title>Vacation Tracker</title>
     <link rel="stylesheet" href="style.css" />
-    
+    <link rel="manifest" href="vacationtracker.json" />
+    <link rel="icon" href="assets/icons/icon-48x48.png" />
   </head>
   <body>
     <h1>Vacation tracker</h1>
