--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="manifest" href="vacationtracker.json" />
     <link rel="icon" href="assets/icons/icon-48x48.png" />
+    <!-- register the service worker -->
+    <script>
+      //with no error checking once the app is debugged:
+      // if("serviceWorker" in navigator) {
+      //   navigator.serviceWorker.register("sw.js");
+      // }
+
+      //with robust error checking for debugging:
+      if("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("sw.js").then(
+          (registration) => {
+            console.log("service worker registration successful:", 
+              registration
+            );
+          },
+          (error) => {
+            console.log("service worker registration failed:", 
+              registration
+            );
+          }
+        )
+      } else {
+            console.error("service workers are not supported.");
+      }
+    </script>
   </head>
   <body>
     <h1>Vacation tracker</h1>
