--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <button type="submit">Add Vacation</button>
       </p>
     </form>
+
+    <div id="messages">
+      <button id="sendButton">Send a message</button>
+    </div>
+
     <section id="past-vacations"></section>
 
     <script src="app.js" defer></script>
