added sync API handling

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
       <button id="sendButton">Send a message</button>
     </div>
 
+    <form id="dataForm">
+      <input type="text" id="dataInput" placeholder="Enter data to send" />
+      <button typ="submit">Send Data</button>
+    </form>
+    <div id="status"></div>
+
     <section id="past-vacations"></section>
 
     <script src="app.js" defer></script>
